--- a/app/globals.css
+++ b/app/globals.css
@@ -196,6 +196,9 @@ body {
 		grid-auto-flow: dense;
 	}
 }
+.nogap {
+	gap: 0;
+}
 
 .wrapper-page {
 	width: 100%;
@@ -264,6 +267,66 @@ body {
 	grid-column: span 1;
 } */
 
+.about-wrapper {
+	width: 100%;
+	display: grid;
+	grid-template-columns: repeat(1, 1fr);
+	grid-template-areas:
+		'menu'
+		'aboutcontent';
+	@media (width > 48rem) {
+		grid-template-columns: 14rem auto;
+		grid-template-areas: 'menu aboutcontent';
+	}
+	@media (width > 64rem) {
+		grid-template-columns: 14rem auto 14rem;
+		grid-template-areas: 'menu aboutcontent .';
+	}
+}
+.about,
+.contact {
+	grid-area: aboutcontent;
+
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	& article {
+		display: grid;
+	}
+	& h2 {
+		margin-bottom: 2rem;
+		align-self: flex-start;
+	}
+	& p {
+		text-align: left;
+		font-size: 1.3rem;
+	}
+	& p + p {
+		margin-bottom: 2rem;
+	}
+	& small {
+		justify-self: flex-end;
+	}
+	& article img {
+		margin: 2rem auto;
+	}
+	@media (width > 48rem) {
+		/* text-align: center; */
+		margin-top: 0.5rem;
+		padding: 0 1rem;
+		line-height: 1.3;
+		/* max-width: 800px; */
+	}
+}
+.contact {
+	align-items: flex-start;
+	display: flex;
+	flex-direction: column;
+	gap: 1.5rem;
+	@media (width> 48rem) {
+		margin-top: 1.3rem;
+	}
+}
 /*---------------------------------- cols---------------------------------- */
 @media (width > 48rem) {
 	.col-1 {
@@ -375,6 +438,27 @@ body {
 	}
 }
 
+.bolder {
+	font-weight: 900;
+}
+.bold {
+	font-weight: 700;
+}
+
+.regular {
+	font-weight: 400;
+}
+.normal {
+	font-style: normal;
+}
+.italic {
+	font-style: italic;
+}
+@media (min-width: 48rem) {
+	.rotate {
+		transform: rotate(-90deg);
+	}
+}
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
 	html:focus-within {
