--- a/app/photography/[url]/page.module.css
+++ b/app/photography/[url]/page.module.css
@@ -1,3 +1,67 @@
+.page {
+	width: 100%;
+	display: grid;
+	grid-template-columns: repeat(1, 1fr);
+	grid-template-areas:
+		'menu'
+		'imgcontainer'
+		'title'
+		'data'
+		'description';
+	@media (width > 48rem) {
+		grid-template-columns: 14rem auto;
+		grid-template-areas:
+			'menu imgcontainer'
+			'menu title'
+			'menu data'
+			'menu description';
+	}
+	@media (width > 80rem) {
+		max-height: calc(100vh - 2rem);
+		grid-template-columns: 14rem auto 14rem;
+		grid-template-rows: repeat(2, 1fr);
+		grid-template-areas:
+			'menu imgcontainer description'
+			'data imgcontainer description ';
+	}
+}
+
+.imgContainer {
+	grid-area: imgcontainer;
+	height: 100%;
+}
+.pageTitle {
+	grid-area: title;
+	line-height: 1.5;
+	@media (width > 80rem) {
+		display: none;
+	}
+}
+.pageData {
+	grid-area: data;
+	display: flex;
+	flex-direction: column;
+	gap: 0.4rem;
+	margin: 0 0 1rem 0;
+	@media (width > 80rem) {
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-end;
+		align-items: end;
+		text-align: right;
+		padding-right: 1rem;
+	}
+}
+.pageDescription {
+	grid-area: description;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	font-size: 1.2rem;
+	line-height: 1.4;
+}
+
 .backbtn,
 .nextbtn {
 	position: absolute;
